<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matematica_preu"
        android:textSize="@dimen/texto_subtitulo"
        android:layout_marginBottom="@dimen/texto_vertical"
        android:layout_marginTop="@dimen/texto_vertical"
        android:layout_marginStart="@dimen/texto_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btnBases_matematicas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bases_matematicas"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bases_matematicas"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btnGeometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geometria"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/geometria"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/fisicaI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fisicaI"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fisicaI"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btnQuimica_inorganica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quimica_inorganica"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quimica_inorganica"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btnAlgebra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/algebra"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/algebra"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btnTrigonometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trigonometria"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trigonometria"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btnfisicaII"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fisicaII"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fisicaII"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btnQuimica_organica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quimica_organica"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quimica_organica"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/texto_subtitulo"
        android:text="@string/matematica_u"
        android:layout_marginStart="@dimen/texto_horizontal"
        android:layout_marginTop="@dimen/texto_vertical"
        android:layout_marginBottom="@dimen/texto_vertical"/>


</LinearLayout>